--- a/src/app/users/list.component.html
+++ b/src/app/users/list.component.html
@@ -3,10 +3,12 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th style="width: 30%">First Name</th>
-            <th style="width: 20%">Last Name</th>
-            <th style="width: 30%">Applied dates</th>
-            <th style="width: 20%"></th>
+            <th style="width: 20%">First Name</th>
+            <th style="width: 10%">Last Name</th>
+            <th style="width: 20%">Applied dates</th>
+            <th style="width: 20%">Type</th>
+            <th style="width: 20%">Number of Days</th>
+            <th style="width: 10%"></th>
         </tr>
     </thead>
     <tbody>
@@ -23,6 +25,12 @@
                         </button> -->
                     </div>
                 </div>
+            </td>
+            <td>
+                {{user.selectedLeaveType }}
+            </td>
+            <td>
+                {{user.numberOfdays }}
             </td>
             <td style="white-space: nowrap">
                 <!-- <a routerLink="edit/{{user.id}}" class="btn btn-sm btn-primary mr-1">Edit</a> -->
